--- a/src/authentication/Login.css
+++ b/src/authentication/Login.css
@@ -1,9 +1,10 @@
 .login {
     display: flex;
     flex-direction: column;
+    height: 400px;
+    width: 300px;
     border: 1px solid grey;
-    padding: 50px;
-    margin-left: 30px;
+    padding: 50px 50px 0px 50px;
     margin-right: 30px;
 }
 
