--- a/src/timeline/Suggestions.css
+++ b/src/timeline/Suggestions.css
@@ -3,6 +3,16 @@
     margin-right: 20px;
 }
 
+.profile-username {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
+}
+
+.profile-avatar{
+    margin-right: 15px;
+}
+
 .suggestions-title {
     color: grey;
     font-weight: bolder;
