Altering the UI

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html {
-    background-color: #000000;
-    color: white;
+    background-color: white;
+    color: black;
   }
   
   .loader-container {
