--- a/src/authentication/Signup.css
+++ b/src/authentication/Signup.css
@@ -21,7 +21,7 @@
     border-radius: 3px;
     padding: 12px;
     margin-bottom: 20px;
-    color: white;
+    color: black;
 }
 
 .signup > input:focus {
