--- a/src/navigation/Sidenav.css
+++ b/src/navigation/Sidenav.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    color: white;
+    color: black;
     background: 0;
     border: 0;
     margin: 5px 10px 5px 10px;
@@ -48,7 +48,7 @@
 .loguout-button{
     font-size: 15px;
     font-weight: bold;
-    color: white;
+    color: black;
     background-color: rgba(255, 255, 255, 0.211);
     border-radius: 10px;
     border: 0;
